[nav:sass] Fix visibility

--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -68,7 +68,6 @@
     z-index: -1;
     border-radius: 50%;
     transform: translateZ(0);
-    backface-visibility: hidden;
     transform: scale(1);
     background-color: black;
     transform-origin: center 30%;
